media query fixes - scale down opening hours card on mobile

--- a/css/style.scss
+++ b/css/style.scss
@@ -142,6 +142,7 @@ main {
 	background-attachment: fixed;
 	position: relative;
 	// z-index: ;
+	padding-bottom: 9.6rem;
 
 	.overlay {
 		display: none;
@@ -305,7 +306,7 @@ main {
 
 .prices-section {
 	position: relative;
-	// background-color: #e9e9e9;
+	background-color: #f3f3f3;
 	padding: 9.6rem 0;
 	// margin-bottom: 4.8rem;
 	// background: url('../img/overlay-texture01.jpg');
@@ -387,7 +388,7 @@ main {
 			text-transform: uppercase;
 			margin-bottom: 1.2rem;
 			font-weight: 600;
-			// text-decoration: underline;
+			text-decoration: underline;
 			font-weight: 900;
 			letter-spacing: 1px;
 		}
@@ -457,7 +458,6 @@ main {
 }
 
 .find-os-section {
-	background-color: #f3f3f3;
 	padding: 9.6rem 0;
 	h2 {
 		text-align: center;
@@ -564,10 +564,16 @@ main {
 @media (max-width: 1136px) {
 	.om-section {
 		grid-template-columns: 1fr;
-		min-height: 75vh;
+		min-height: unset;
+
+		.om-text-container {
+			padding-top: 7.2rem;
+			padding-bottom: 7.2rem;
+		}
 
 		.om-img-container {
 			background-image: unset;
+			padding: 7.2rem 0;
 		}
 	}
 }
@@ -582,6 +588,7 @@ main {
 			url('../img/hero04-flipped-compressed.jpg');
 		position: relative;
 		background-repeat: unset;
+		padding-bottom: 4.8rem;
 
 		.overlay {
 			display: block;
@@ -591,9 +598,7 @@ main {
 			position: absolute;
 			z-index: -1;
 		}
-		.main-header {
-			padding-bottom: 4.8rem;
-		}
+
 		.main-nav {
 			justify-content: center;
 			margin-bottom: 0;
@@ -737,8 +742,12 @@ main {
 
 @media (max-width: 480px) {
 	.hero {
+		.main-nav {
+			padding: 3.2rem 0 0 1.2rem;
+		}
 		.opening-hours-card {
 			padding: 2.4rem;
+			transform: scale(0.9);
 			.opening-hours {
 				.line {
 					width: 3.2rem;
@@ -802,8 +811,12 @@ main {
 		font-size: 2rem;
 	}
 	.hero {
+		.main-nav {
+			padding: 3.2rem 0 0 1.2rem;
+		}
 		.opening-hours-card {
 			padding: 2.4rem;
+			transform: scale(0.9);
 			.opening-hours {
 				.line {
 					width: 3.2rem;
